# easyDeploy

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: code-rabbit.md
.claude/commands/pm/: clean.md  epic-close.md  epic-edit.md  epic-merge.md  epic-oneshot.md  epic-refresh.md  import.md  issue-analyze.md  issue-close.md  issue-edit.md  issue-reopen.md  issue-show.md  issue-start.md  issue-status.md  prd-edit.md  sync.md  test-reference-update.md
.claude/commands/testing/: run.md
.claude/epics/login-and-authenticate-gcp/: 2-analysis.md  2.md  3-analysis.md  3.md  4-analysis.md  4.md  5-analysis.md  5.md  epic.md  github-mapping.md
.claude/epics/login-and-authenticate-gcp/updates/2/: stream-A.md  stream-B.md
.claude/epics/login-and-authenticate-gcp/updates/3/: stream-A.md
.claude/epics/login-and-authenticate-gcp/updates/4/: stream-A.md
.claude/epics/login-and-authenticate-gcp/updates/5/: stream-A.md  stream-B.md
.claude/prds/: login-and-authenticate-gcp.md
.claude/rules/: datetime.md  frontmatter-operations.md  standard-patterns.md  strip-frontmatter.md  test-execution.md  worktree-operations.md
.claude/scripts/pm/: init.sh
src/easydeploy/: __init__.py
src/easydeploy/cli/: __init__.py  azure.py  gcp.py  main.py
src/easydeploy/cloud/: __init__.py  gcp.py
src/easydeploy/cloud/gcp/: auth.py
src/easydeploy/config/: __init__.py  settings.py
src/easydeploy/deploy/: __init__.py
src/easydeploy/utils/: __init__.py  logging.py
src/scripts/gpu/: nvidia_setup.sh
src/scripts/isaac/: install_isaac.sh
src/scripts/ros/: install_ros2.sh
src/scripts/system/: base_setup.sh
src/scripts/utils/: common.sh
state/: .gitkeep
templates/: deployment-config.yaml.j2  gcp-instance.yaml.j2
tests/: __init__.py  test_gcp_auth.py  test_gcp_cli.py
tests/unit/: test_cli.py
